--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,28 @@
     </head>
     <body onLoad="start_state()">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card">
+                    <img src=# class="card-img-top" alt="...">
+                  
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div>
+          </div>
         <script>
             function refresh() {
                 fetch(`http://{{server_ip}}:8000/relay_states`)
